--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ license = "Apache-2.0"
 
 [workspace.dependencies]
 amplify = "4.9.0"
+bitcoin_hashes = "0.16"
 strict_encoding = "2.9.1"
 strict_types = "2.9.0"
 commit_verify = "0.12.0"
